--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -6,6 +6,9 @@
 /PiAloud.class
 /SimpleCalculator.class
 /SleepyHead.class
-/robot.jar
 /cen.wav
 /hall.wav
+/robot.jar
+/335908__littlerainyseasons__correct.mp3
+/wrong.wav
+/131660__bertrof__game-sound-correct.wav
