--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,12 +3,13 @@
 /ChangeCalculator.class
 /CoDrone
 /DontForgetTheLyrics.class
+/cen.wav
+/hall.wav
+/robot.jar
+/wrong.wav
 /FruitQuiz.class
 /HappyPet.class
 /PiAloud.class
 /SimpleCalculator.class
 /SleepyHead.class
-/cen.wav
-/hall.wav
-/robot.jar
-/wrong.wav
+/NumberSquare.class
