--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,13 +3,14 @@
 /ChangeCalculator.class
 /CoDrone
 /DontForgetTheLyrics.class
+/FruitQuiz.class
+/HappyPet.class
+/NumberSquare.class
+/PiAloud.class
+/SimpleCalculator.class
+/SleepyHead.class
 /cen.wav
 /hall.wav
 /robot.jar
 /wrong.wav
-/FruitQuiz.class
-/HappyPet.class
-/PiAloud.class
-/SimpleCalculator.class
-/SleepyHead.class
-/NumberSquare.class
+/modulo.class
