--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,17 +1,19 @@
 /131660__bertrof__game-sound-correct.wav
 /335908__littlerainyseasons__correct.mp3
-/ChangeCalculator.class
 /CoDrone
+/cen.wav
+/hall.wav
+/robot.jar
+/wrong.wav
+/ChangeCalculator.class
 /DontForgetTheLyrics.class
 /FruitQuiz.class
 /HappyPet.class
+/Houses.class
 /NumberSquare.class
 /PiAloud.class
 /SimpleCalculator.class
 /SleepyHead.class
-/cen.wav
-/hall.wav
 /modulo.class
-/robot.jar
-/wrong.wav
-/Houses.class
+/PrimeorNot.class
+/fib.class
